GitOps/clusters/cyberhawk-talos-k8s/3-apps/netbox/23-valkey-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbox-valkey
spec:
  selector:
    app: netbox-valkey
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
