GitOps/clusters/cyberhawk-talos-k8s/3-apps/netbox/32-netbox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbox
spec:
  selector:
    app: netbox
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
